# hpc_exercises

./: .gitignore  CMakeLists.txt  ManualMakefile  generate_submission.sh  input1024.ppm  input128.ppm  input256.ppm  input512.ppm  input64.ppm  lab01-input.txt  lab01-script  lab01.c  lab02-script  lab02.cpp  lab03-script  lab03_1.cpp  lab03_2.cpp  lab04-script  lab04.cpp  lab05-gnuplotcommands.txt  lab05-readme.txt  lab05-script  lab05-script-measure  lab05.cpp  lab06-script  lab06.cpp  lab07-script  lab07.cpp  lab08-script  lab09-script  lab09.cpp  main.c
lab08_src/: Car.cpp  Car.h  RushHour.cpp  State.cpp  State.h  StateManager.cpp  StateManager.h
